--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepgae" : "https://sagar712.github.io/react-portfolio/home",
+  "homepgae" : "https://sagar712.github.io/react-portfolio/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
